style: styling of sub-menus

--- a/style.css
+++ b/style.css
@@ -43,6 +43,26 @@ nav ul li a
     color: #000;
 }
   
+.sub-menu-1
+{
+   display: none;
+}
+
+nav ul li:hover .sub-menu-1
+{
+    display: block;
+    position: absolute;
+    background-color: orange;
+    margin-top: 15px;
+    margin-left: -15px;
+}
+
+nav ul li:hover .sub-menu-1 ul
+{ 
+
+}
+
+
 
 
 
